refactor: UserNotificationServiceImpl
Signed-off-by: RadovanTomik <radovan.tomasik@bbmri-eric.eu>